# term-sheet

./: .gitignore  README.md  pyproject.toml  run_termsheet.py  termsheet.spec
.claude/skills/termsheet-dev/: SKILL.md
.github/workflows/: release.yml
.venv-build/: pyvenv.cfg
qa_samples/: QA.xlsx
scripts/: benchmark_large_xlsx.py  build_linux.sh  build_macos.sh  build_windows.ps1
termsheet/: app.py  clipboard.py  config.py  grid.py
termsheet/io/: xlsx_io.py
termsheet/model/: cell.py  coords.py  formatting.py  formula_engine.py  undo.py  workbook.py
termsheet/ui/: dialogs.py  file_browser.py  statusbar.py  themes.py
tests/: test_app_keyboard.py  test_benchmark_large_files.py  test_file_browser.py  test_formatting.py  test_formula_engine.py  test_grid_ui.py  test_layout.py  test_qa_fixtures.py  test_undo.py  test_xlsx_io.py
