[project]
name = "termsheet"
version = "0.1.0"
description = "Hoja de cálculo en terminal, 100% teclado, compatible con .xlsx"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.60.0",
    "openpyxl>=3.1.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "textual-dev>=1.5.0",
    "pyinstaller>=6.5.0",
]

[project.scripts]
termsheet = "termsheet.app:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["termsheet*"]

[tool.pytest.ini_options]
markers = [
    "slow: pruebas lentas/pesadas (benchmarks de archivos .xlsx grandes) excluidas del `pytest` normal — ver README, sección Benchmark",
]
addopts = "-m \"not slow\""
